# SteRoP_2025_RACKET_MKMO

./: .gitignore
Pico/: .gitignore  CMakeLists.txt  main.c
Pico/include/: icm20948.h  platform.h
Pico/src/: icm20948.c  main.c  platform.c
testy_lcd/: .cproject  .mxproject  .project  testy_lcd Debug.launch  testy_lcd.ioc
testy_lcd/Core/Inc/: stm32f4xx_it.h
testy_lcd/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
testy_lcd/Debug/: makefile  objects.list  sources.mk  testy_lcd.elf  testy_lcd.list  testy_lcd.map
testy_lcd/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  subdir.mk
testy_lcd/Debug/Drivers/BSP/STM32F429I-Discovery/: subdir.mk
testy_lcd/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_can.d  stm32f4xx_hal_cec.d  stm32f4xx_hal_cryp.d  stm32f4xx_hal_cryp_ex.d  stm32f4xx_hal_dac.d  stm32f4xx_hal_dac_ex.d  stm32f4xx_hal_dcmi.d  stm32f4xx_hal_dcmi_ex.d  stm32f4xx_hal_dfsdm.d  stm32f4xx_hal_eth.d  (+30 more)
testy_lcd/Debug/USB_HOST/App/: subdir.mk
testy_uart/: .cproject  .mxproject  .project  testy_uart Debug.launch  testy_uart.ioc
testy_uart/Core/Inc/: main.h  stm32f4xx_it.h
testy_uart/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
testy_uart/Debug/: makefile  objects.list  testy_uart.elf  testy_uart.list  testy_uart.map
testy_uart/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk
testy_uart/Debug/Core/Startup/: subdir.mk
(+35 files in other folders)
